--- a/Carnetul de Note/Base.lproj/Main.storyboard
+++ b/Carnetul de Note/Base.lproj/Main.storyboard
@@ -17,11 +17,11 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dvu-Dt-gN1" id="e32-uB-Bvw">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0ne-aS-85R">
-                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                            <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -37,11 +37,73 @@
                             <outlet property="delegate" destination="BYZ-38-t0r" id="Q4k-Pe-NNI"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Configurare" id="vu7-0p-PWV"/>
+                    <navigationItem key="navigationItem" title="Configurare" id="vu7-0p-PWV">
+                        <barButtonItem key="rightBarButtonItem" title="Inainte" id="JlT-Zs-s6a">
+                            <connections>
+                                <segue destination="phQ-B4-Gke" kind="show" identifier="setupToMain" id="mzh-2N-YQQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1941" y="135"/>
+            <point key="canvasLocation" x="1681" y="135"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="bpd-bu-Z68">
+            <objects>
+                <viewController id="Ifl-Os-eMd" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="e33-bz-7vU"/>
+                        <viewControllerLayoutGuide type="bottom" id="ObU-hc-BXM"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rHA-Ii-RTk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="ba1-V1-Han"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GrW-Ww-LJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3400" y="465"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="glj-BJ-wkG">
+            <objects>
+                <viewController id="ieU-Vg-Whi" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ag5-Ny-WhY"/>
+                        <viewControllerLayoutGuide type="bottom" id="2lX-eT-pXz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="c5m-1w-9tz">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="p84-oJ-WxA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dtU-cF-OJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3400" y="-196"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="mQG-us-tAo">
+            <objects>
+                <tabBarController id="phQ-B4-Gke" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="ivd-4K-GZq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ieU-Vg-Whi" kind="relationship" relationship="viewControllers" id="leG-sn-kdd"/>
+                        <segue destination="Ifl-Os-eMd" kind="relationship" relationship="viewControllers" id="AIm-vg-x5K"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cco-Bp-iRi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2412" y="135"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Lts-cf-WZ5">
@@ -59,7 +121,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jma-mT-i22" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1210" y="135"/>
+            <point key="canvasLocation" x="914" y="135"/>
         </scene>
     </scenes>
 </document>
