--- a/Carnetul de Note/Base.lproj/Main.storyboard
+++ b/Carnetul de Note/Base.lproj/Main.storyboard
@@ -130,7 +130,13 @@
                             <outlet property="delegate" destination="ieU-Vg-Whi" id="cVn-E8-7KI"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Materii" id="eHF-td-7jO"/>
+                    <navigationItem key="navigationItem" title="Materii" id="eHF-td-7jO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="HhH-Wo-Fgo">
+                            <connections>
+                                <action selector="addButtonSelected:" destination="ieU-Vg-Whi" id="Nqz-Ip-Aq4"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="qT1-MK-36q" id="xZc-85-mFa"/>
                     </connections>
